vlib/v/checker/tests/for_in_empty_range_u64_err.vv
fn main() {
	for i in 18446744073709551615 .. 18446744073709551615 {
		println(i)
	}

	for i in 9223372036854775808 .. 9223372036854775808 {
		println(i)
	}
}
